<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.messenger.presentation.features.addchat.AddChatViewModel" />

        <variable
            name="controller"
            type="com.deledzis.messenger.presentation.features.addchat.AddChatActionsHandler" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_add_chat_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:backgroundTint="@color/background"
                android:minHeight="64dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ic_back"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:onClick="@{controller::onBackClicked}"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toTopOf="@id/til_search"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arrow_back" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/add_chat"
                        android:textColor="@color/text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/ic_back"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ic_back"
                        app:layout_constraintTop_toTopOf="@id/ic_back" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_search"
                        style="@style/SendMessage.InputText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_search"
                            android:drawablePadding="12dp"
                            android:drawableTint="@color/gray_400"
                            android:hint="@string/placeholder_search"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.searchText}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:orientation="vertical"
                android:visibility="@{!viewModel.loading &amp;&amp; (viewModel.searchText == null || viewModel.searchText.empty)}"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/add_chat_init_title"
                    android:textColor="@color/text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="64dp"
                    android:gravity="center"
                    android:text="@string/add_chat_init_message"
                    android:textColor="@color/text_label"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:orientation="vertical"
                android:visibility="@{!viewModel.loading &amp;&amp; (viewModel.searchText != null &amp;&amp; !viewModel.searchText.empty) &amp;&amp; (viewModel.users == null || viewModel.users.empty)}"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/add_chat_empty_title"
                    android:textColor="@color/text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="64dp"
                    android:gravity="center"
                    android:text="@string/add_chat_empty_message"
                    android:textColor="@color/text_label"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{!viewModel.loading &amp;&amp; viewModel.users != null &amp;&amp; !viewModel.users.empty}"
                tools:itemCount="4"
                tools:listitem="@layout/item_user"
                tools:visibility="gone" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary"
                android:padding="24dp"
                android:visibility="@{viewModel.loading}"
                tools:visibility="gone" />

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>