<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.messenger.presentation.features.login.LoginViewModel" />

        <variable
            name="controller"
            type="com.deledzis.messenger.presentation.features.login.LoginActionsHandler" />

    </data>

    <ScrollView
        android:id="@+id/fragment_login_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_side_padding"
            android:paddingEnd="@dimen/layout_side_padding">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="@color/text"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <!--   Login and Password fields-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textColor="@color/text_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    android:text="@={viewModel.username}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/password"
                android:textColor="@color/text_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="64dp"
                android:clickable="@{!viewModel.loading &amp;&amp; viewModel.username != null &amp;&amp; !viewModel.username.empty &amp;&amp; viewModel.password != null &amp;&amp; !viewModel.password.empty}"
                android:enabled="@{!viewModel.loading &amp;&amp; viewModel.username != null &amp;&amp; !viewModel.username.empty &amp;&amp; viewModel.password != null &amp;&amp; !viewModel.password.empty}"
                android:onClick="@{controller::onLoginClicked}"
                android:text="@string/action_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_registration_button"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="72dp"
                android:clickable="@{!viewModel.loading}"
                android:enabled="@{!viewModel.loading}"
                android:onClick="@{controller::onRegisterClicked}"
                android:text="@string/action_to_register" />

        </LinearLayout>

    </ScrollView>

</layout>