<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.deledzis.messenger.presentation.features.chats.ChatsViewModel" />

        <variable
            name="controller"
            type="com.deledzis.messenger.presentation.features.chats.ChatsActionsHandler" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_chats_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/background"
                android:backgroundTint="@color/background"
                android:elevation="12dp"
                android:minHeight="64dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:elevation="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialogs"
                        android:textColor="@color/text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ic_add"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="@{controller::onAddChatClicked}"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/ic_settings"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibilityReverse="@{viewModel.chats == null || viewModel.chats.empty}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_add" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ic_settings"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="@{controller::onSettingsClicked}"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_settings" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:orientation="vertical"
                    android:visibility="@{!viewModel.loading &amp;&amp; (viewModel.chats == null || viewModel.chats.empty)}"
                    tools:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:gravity="center"
                        android:text="@string/dialogs_empty_title"
                        android:textColor="@color/text"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="64dp"
                        android:gravity="center"
                        android:text="@string/dialogs_empty_message"
                        android:textColor="@color/text_label"
                        android:textSize="18sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/PrimaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="48dp"
                        android:clickable="@{!viewModel.loading}"
                        android:enabled="@{!viewModel.loading}"
                        android:onClick="@{controller::onAddChatClicked}"
                        android:text="@string/dialogs_empty_button" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_chats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{!viewModel.loading &amp;&amp; viewModel.chats != null &amp;&amp; !viewModel.chats.empty}"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_chat" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/primary"
                    android:padding="24dp"
                    android:visibility="@{viewModel.loading}"
                    tools:visibility="gone" />

            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>