...
            name="controller"
            type="com.deledzis.messenger.presentation.features.chat.ChatActionsHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_chat_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
...
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_container"
                app:layout_constraintStart_toEndOf="@id/ic_attach"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_send_message"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                    android:maxLines="6"
...
